--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <img src="/static/logo.svg" alt="Composr Logo" class="logo" onclick="toggleFilterMenu()">
+            <img src="/static/logo-musical.svg" alt="Composr Logo" class="logo" onclick="toggleFilterMenu()">
             <div class="system-stats">
                 <div class="stats-compact">
                     <span>Containers: <span id="total-containers">--</span></span>
