--- a/templates/index copy.html
+++ b/templates/index copy.html
@@ -194,7 +194,8 @@
                             <th>Tags</th>
                             <th onclick="sortTable('status')">Status</th>
                             <th onclick="sortTable('uptime')">Uptime</th>
-                            <th>Ports</th>
+                            <th onclick="sortTable('cpu')">CPU</th>
+                            <th onclick="sortTable('memory')">Memory</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
